project/ansible/front_role/templates/rules.v4
*filter
:INPUT DROP [9:540]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp0s19 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -i enp0s19 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -i enp0s19 -p tcp -m state --state NEW -m tcp --dport 3000 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i enp0s3 -j ACCEPT
-A INPUT -i enp0s8 -j ACCEPT
COMMIT
